[package]
name = "level_db_rs"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "hash_bench"  # 这里的名字必须和 benches/ 下的文件名一致（不带 .rs 后缀）
harness = false  # 禁用默认的基准测试框架，使用 criterion


[dependencies]
criterion = "0.5.1"
bytes = "1.10.0"
bumpalo = { version = "3.17.0", features = ["collections", "boxed", "serde"] }
lru = "0.13.0"
log = "0.4.26"
crc32c = "0.6.8"
positioned-io = "0.3.3"
memmap2 = "0.9.5"
rustix = { version = "1.0.3", features = ["fs"]}