[package]
name = "level_db_rs"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "hash_bench"  # 这里的名字必须和 benches/ 下的文件名一致（不带 .rs 后缀）
harness = false  # 禁用默认的基准测试框架，使用 criterion


[dependencies]
criterion = "0.5.1"
bytes = "1.10.0"
bumpalo = { version = "3.17.0", features = ["collections", "boxed", "serde"] }
tracing = "0.1.41"
crc32c = "0.6.8"
positioned-io = "0.3.4"
memmap2 = "0.9.5"
rustix = { version = "1.0.5", features = ["fs"]}
libc = "0.2.169"
crossbeam = "0.8.4"
rand = "0.9.0"
ahash = "0.8.11"
intrusive-collections = "0.9.7"
num-traits = "0.2.19"
num-derive = "0.4.2"
snap = "1.1"
zstd-safe = { version = "7.2.4",features = ["default", "zstdmt"]}
crossbeam-skiplist = "0.1.3"
